# time-tracker

./: README.md  meson.build  net.ejmtech.TimerTracker.json
data/: meson.build  net.ejmtech.TimerTracker.desktop.in  net.ejmtech.TimerTracker.gschema.xml  net.ejmtech.TimerTracker.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  timer-tracker-application.c  timer-tracker-application.h  timer-tracker.gresource.xml
src/gui/: timer-tracker-window.c  timer-tracker-window.h  timer-tracker-window.ui
